backend/api/tests/integration/jig/snapshots/integration__jig__module__create_default-1.snap
---
source: tests/integration/jig/module.rs
expression: body
---
{
  "id": "[id]",
  "stable_id": "[stable_id]",
  "kind": "Cover",
  "is_complete": false
}
