backend/api/tests/integration/jig/snapshots/integration__jig__module__create_default-2.snap
---
source: tests/integration/jig/module.rs
expression: body
---
{
  "module": {
    "id": "[id]",
    "stable_id": "[stable_id]",
    "body": {
      "cover": {
        "content": null
      }
    },
    "is_complete": false,
    "is_updated": false,
    "created_at": "[created_at]",
    "updated_at": "[updated_at]"
  }
}
