backend/api/tests/integration/jig/snapshots/integration__jig__module__get_live.snap
---
source: tests/integration/jig/module.rs
expression: body
---
{
  "module": {
    "id": "a6b24970-1dd7-11ec-8426-57136b411853",
    "body": {
      "flashcards": {
        "content": null
      }
    },
    "is_complete": false,
    "is_updated": true,
    "created_at": "2021-03-04T00:46:26.134651Z",
    "updated_at": "[timestamp]"
  }
}
