backend/api/tests/integration/jig/snapshots/integration__jig__module__update_contents-2.snap
---
source: tests/integration/jig/module.rs
expression: body
---
{
  "module": {
    "id": "a6b24a06-1dd7-11ec-8426-635a3a7ea572",
    "stable_id": "0fb3d582-c5f7-11ee-95d6-ab330329b0df",
    "body": {
      "memoryGame": {
        "content": {
          "base": {
            "editor_state": {
              "step": "One",
              "steps_completed": []
            },
            "instructions": {
              "text": null,
              "audio": null
            },
            "feedback": {
              "text": null,
              "audio": null
            },
            "mode": "Duplicate",
            "pairs": [],
            "theme": "Blank",
            "background": null
          },
          "player_settings": {
            "time_limit": null,
            "pairs_to_display": null
          }
        }
      }
    },
    "is_complete": true,
    "is_updated": true,
    "created_at": "2021-03-04T00:46:26.134651Z",
    "updated_at": "[timestamp]"
  }
}
