backend/api/tests/integration/jig/snapshots/integration__jig__module__update_empty.snap
---
source: tests/integration/jig/module.rs
expression: body
---
{
  "module": {
    "id": "a6b24a42-1dd7-11ec-8426-a7165f9281a2",
    "stable_id": "b3dab748-c5f7-11ee-9d68-3f6401083bda",
    "body": {
      "flashcards": {
        "content": null
      }
    },
    "is_complete": false,
    "is_updated": true,
    "created_at": "2021-03-04T00:46:26.134651Z",
    "updated_at": "[timestamp]"
  }
}
