backend/api/tests/integration/jig/snapshots/integration__jig__module__update_kind.snap
---
source: tests/integration/jig/module.rs
expression: body

---
{
  "module": {
    "id": "0cc03a02-7c83-11eb-9f77-f77f9ad65e9a",
    "body": {
      "cover": {}
    }
  }
}
